react-app/sampleApp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avp-back-deployment
  namespace: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avp-back
  template:
    metadata:
      labels:
        app: avp-back
    spec:
      containers:
        - name: avp-back
          image: "avp-back:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
