react-app/sampleApp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: avp-back-service
  namespace: react-app
spec:
  selector:
    app: avp-back
  ports:
    - name: http
      protocol: TCP
      port: 8080
  type: ClusterIP
  # ports:
  #   - name: http
  #     port: 3000
  #     nodePort: 30081
  # type: NodePort
